test/scc_test/expr/semantic-errors/012.t
void test()
{
    int a[10];
    a++;
}